[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "upathlib"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
dependencies = [
    "filelock >=3.3.0",
    "deprecation",
    "opnieuw",
    "orjson >=3.6.0",
    "overrides",
    "tqdm",
    "zstandard >=0.18.0",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/upathlib"


[project.optional-dependencies]
abs = [
    "azure-storage-blob >=12.9.0,<13.0",
]
gcs = [
    "google-auth",
    "google-api-python-client >=2.13.9,<3.0",
    "google-cloud-storage >=2.0,<3.0",
    "requests",
]
doc = [
    "sphinx < 6.0.0",  # 6.0.0 has a bug complaining "'logo' is undefined
    "numpydoc",
    "pydata-sphinx-theme",
]
test = [
    "bandit",
    "coverage[toml]",
    "flake8",
    "mypy",
    "numpy",
    "pylint",
    "pytest",
    "pytest-mock",
]


[tool.flit.module]
name = "upathlib"


[tool.flake8]
ignore = ["E203", "E231", "E501", "W503"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-sv --log-cli-level info -p no:cacheprovider"


[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true


[tool.coverage.run]
data_file = "/tmp/.coverage"


[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "consider-using-f-string",
    "missing-docstring",
    "invalid-name",
    "line-too-long",
    "fixme",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-branches",
    "too-many-return-statements",
]
