[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "upathlib"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
dependencies = [
    "filelock >= 3.9.1",
    "deprecation",
    "tqdm",
    "typing-extensions",
    "mpservice >= 0.11.9",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/upathlib"


[project.optional-dependencies]
abs = [
    "azure-storage-blob >=12.9.0,<13.0",
]
gcs = [
    "google-auth",
    "google-api-python-client >=2.13.9,<3.0",
    "google-cloud-storage >=2.0,<3.0",
    "requests",
]
zstandard = ["zstandard"]
lz4 = ["lz4"]
doc = [
    "sphinx",
    "numpydoc",
    "pydata-sphinx-theme",
]
test = [
    "black",
    "mypy",
    "numpy",
    "pytest-mock",
    "ruff",
]


[tool.flit.module]
name = "upathlib"


# See https://beta.ruff.rs/docs/rules/
[tool.ruff]
target-version = "py38"
select = ["E", "F", "S", "I001"]  # isort
ignore = ["E501", "S101", "S102", "S103", "S104", "S108", "S301", "S311", "S608"]
exclude = ["tests/benchmarks"]


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-sv --log-cli-level info -p no:cacheprovider --tb short --ignore tests/benchmarks --durations 3"


[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true


[tool.coverage.run]
source = ["upathlib"]
data_file = "/tmp/.coverage"
