[metadata]
name = upathlib
version = attr: upathlib.__version__
url = https://github.com/zpz/upathlib
description = Package upathlib
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

# `name` must be the name of the package directory in `src/`.
# `__version__` is defined in the `__init__.py` file of the package.


[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >= 3.7
install_requires=
    filelock >=3.0.12,<3.1.0
    python-dateutil
    azure-storage-blob >=12.8.1,<12.9.0
    google-api-python-client >=2.13.0,<2.14.0
    google-cloud-storage >=1.41.0,<1.42.0
    aiohttp

# aiohttp[speedups] would need gcc

# TODO: install cloud blob package only when requested.
# aiohttp is required by the async Azure API (the Azure package, not upath).

[options.packages.find]
where = src


[options.package_data]
upathlib = py.typed


[bdist_wheel]
universal=0
